logs/site-discovery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/et_xmlfile'...
Listing './lib/python3.5/site-packages/et_xmlfile/tests'...
Listing './lib/python3.5/site-packages/et_xmlfile-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/influxdb'...
Listing './lib/python3.5/site-packages/influxdb/influxdb08'...
Listing './lib/python3.5/site-packages/influxdb/tests'...
Listing './lib/python3.5/site-packages/influxdb/tests/influxdb08'...
Listing './lib/python3.5/site-packages/influxdb/tests/server_tests'...
Listing './lib/python3.5/site-packages/influxdb-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/jdcal-1.3.egg-info'...
Listing './lib/python3.5/site-packages/openpyxl'...
Listing './lib/python3.5/site-packages/openpyxl/cell'...
Listing './lib/python3.5/site-packages/openpyxl/chart'...
Listing './lib/python3.5/site-packages/openpyxl/chartsheet'...
Listing './lib/python3.5/site-packages/openpyxl/comments'...
Listing './lib/python3.5/site-packages/openpyxl/compat'...
Listing './lib/python3.5/site-packages/openpyxl/descriptors'...
Listing './lib/python3.5/site-packages/openpyxl/drawing'...
Listing './lib/python3.5/site-packages/openpyxl/formatting'...
Listing './lib/python3.5/site-packages/openpyxl/formula'...
Listing './lib/python3.5/site-packages/openpyxl/packaging'...
Listing './lib/python3.5/site-packages/openpyxl/reader'...
Listing './lib/python3.5/site-packages/openpyxl/styles'...
Listing './lib/python3.5/site-packages/openpyxl/utils'...
Listing './lib/python3.5/site-packages/openpyxl/workbook'...
Listing './lib/python3.5/site-packages/openpyxl/workbook/external_link'...
Listing './lib/python3.5/site-packages/openpyxl/worksheet'...
Listing './lib/python3.5/site-packages/openpyxl/writer'...
Listing './lib/python3.5/site-packages/openpyxl/xml'...
Listing './lib/python3.5/site-packages/openpyxl-2.4.9.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.12.14.dist-info'...
Listing './lib/python3.5/site-packages/site_discovery'...
Compiling './lib/python3.5/site-packages/site_discovery/get_sites.py'...
***   File "./lib/python3.5/site-packages/site_discovery/get_sites.py", line 139
    os.chmod(self.args.results_dir, 0700)
                                       ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/site_discovery/server_info.py'...
***   File "./lib/python3.5/site-packages/site_discovery/server_info.py", line 107
    print '%s: %s (%s)' % (result['name'], result['result'], result['time'])
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/site_discovery/site_info.py'...
***   File "./lib/python3.5/site-packages/site_discovery/site_info.py", line 155
    print '%s: %s' % (t['name'], t['result'])
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/site_discovery-0.0.7.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
